--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,9 @@
-# version: 2.1
-# orbs:
-#   cypress: cypress-io/cypress@3
-# workflows:
-#   build:
-#     jobs:
-#       - cypress/run:
-#           start-command: 'npx vite preview'
-#           cypress-command: 'npx cypress run'
+version: 2.1
+orbs:
+  cypress: cypress-io/cypress@3
+workflows:
+  build:
+    jobs:
+      - cypress/run:
+          start-command: 'npx vite preview'
+          cypress-command: 'npx cypress run'
