--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,6 @@ orbs:
 workflows:
   build:
     jobs:
-      - cypress/run:
+      - cypress-io/run:
           start-command: 'npx vite preview'
           cypress-command: 'npx cypress run'
